# testdiff

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
scripts/: install.sh
src/: format.rs  git.rs  main.rs  priority.rs
src/project/: graph.rs  index.rs  mod.rs  resolve.rs  tests.rs  utils.rs
