[package]
name = "testdiff"
version = "0.1.1"
authors = ["Mazdak Rezvani"]
edition = "2024"
rust-version = "1.89"
repository = "https://github.com/mazdak/testdiff"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0.86"
camino = "1.1.7"
clap = { version = "4.5.3", features = ["derive"] }
ignore = "0.4.22"
once_cell = "1.19.0"
pathdiff = "0.2.3"
regex = "1.10.4"
roxmltree = "0.21.1"
shellexpand = "3.1.1"
tempfile = "3.10.1"

ruff_python_ast = { git = "https://github.com/astral-sh/ruff", tag = "0.14.6", package = "ruff_python_ast" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", tag = "0.14.6", package = "ruff_python_parser" }
ruff_python_semantic = { git = "https://github.com/astral-sh/ruff", tag = "0.14.6", package = "ruff_python_semantic" }
ruff_source_file = { git = "https://github.com/astral-sh/ruff", tag = "0.14.6", package = "ruff_source_file" }
ruff_workspace = { git = "https://github.com/astral-sh/ruff", tag = "0.14.6", package = "ruff_workspace" }
